force-app/main/default/objects/ServiceContractRenewalConditionChange__c/ServiceContractRenewalConditionChange__c.object-meta.xml
<CustomObject>
    <label>サービス_更新条件変更</label>
    <nameField>
        <label>サービス契約_更新条件変更名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>