force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>サービス_更新条件変更</relationshipLabel>
    <relationshipName>xBh1</relationshipName>
    <type>Lookup</type>
</CustomField>