force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AntisocialSpecifyContentRenewal__c.field-meta.xml
<CustomField>
    <fullName>AntisocialSpecifyContentRenewal__c</fullName>
    <label>反社対応指定内容_更新</label>
    <length>255</length>
    <type>Text</type>
</CustomField>