force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AntisocialSpecifyContentTermsChange__c.field-meta.xml
<CustomField>
    <fullName>AntisocialSpecifyContentTermsChange__c</fullName>
    <label>反社対応指定内容_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>