force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AttachedDocumentNameRenewal__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentNameRenewal__c</fullName>
    <label>添付書類名_更新</label>
    <length>255</length>
    <type>Text</type>
</CustomField>