force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AtUpdateFireInsuranceTreatment__c.field-meta.xml
<CustomField>
    <fullName>AtUpdateFireInsuranceTreatment__c</fullName>
    <label>更新時火災保険扱い</label>
    <length>255</length>
    <type>Text</type>
</CustomField>