force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AtUpdateInsuranceMemo__c.field-meta.xml
<CustomField>
    <fullName>AtUpdateInsuranceMemo__c</fullName>
    <label>更新時保険メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>