force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/AutoRenewalTreatment__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewalTreatment__c</fullName>
    <label>自動更新の扱い</label>
    <length>255</length>
    <type>Text</type>
</CustomField>