force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/ContractStorageReminderAddDays__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageReminderAddDays__c</fullName>
    <label>締結書類保管督促後の次回督促までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>