force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/EmailSendRuleRenewalOther__c.field-meta.xml
<CustomField>
    <fullName>EmailSendRuleRenewalOther__c</fullName>
    <label>メール送信ルール_更新_その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>