force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/ExpiryListSubmitMethod__c.field-meta.xml
<CustomField>
    <fullName>ExpiryListSubmitMethod__c</fullName>
    <label>満了一覧提出方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>