force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/ForUpdateApprovalContactFormComment__c.field-meta.xml
<CustomField>
    <fullName>ForUpdateApprovalContactFormComment__c</fullName>
    <label>更新用承認連絡書連絡コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>