force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/IsCompanyReductionTarget__c.field-meta.xml
<CustomField>
    <fullName>IsCompanyReductionTarget__c</fullName>
    <label>企業減額対象フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>