force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/IsInRenewalCancelFeasibilityConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsInRenewalCancelFeasibilityConfirm__c</fullName>
    <label>更新中解約可否確認フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>