force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/IsInRenewalCancelMemo__c.field-meta.xml
<CustomField>
    <fullName>IsInRenewalCancelMemo__c</fullName>
    <label>更新中解約フラグメモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>