force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/IsRentDifferenceRenewalFeeUnadjustable__c.field-meta.xml
<CustomField>
    <fullName>IsRentDifferenceRenewalFeeUnadjustable__c</fullName>
    <label>賃料差額更新料調整不可フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>