force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/IsTermsConfirmationAutoSend__c.field-meta.xml
<CustomField>
    <fullName>IsTermsConfirmationAutoSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>条件確認書自動送付</label>
    <type>Checkbox</type>
</CustomField>