force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalCategory__c.field-meta.xml
<CustomField>
    <fullName>RenewalCategory__c</fullName>
    <label>更新区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自動以外全部処理</fullName>
            </value>
            <value>
                <fullName>全部処理</fullName>
            </value>
            <value>
                <fullName>来たもののみ処理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>