force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalExpiryListNecessity__c.field-meta.xml
<CustomField>
    <fullName>RenewalExpiryListNecessity__c</fullName>
    <label>更新満了一覧の必要性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>