force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalNegotiationRule__c.field-meta.xml
<CustomField>
    <fullName>RenewalNegotiationRule__c</fullName>
    <label>更新交渉ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>