force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalOtherNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalOtherNotes__c</fullName>
    <label>更新その他注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>