force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalReportAtPriceIncreaseDestination__c.field-meta.xml
<CustomField>
    <fullName>RenewalReportAtPriceIncreaseDestination__c</fullName>
    <label>更新_報告ルール_値上げ時メール送信先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>