force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalReportDecisionDelayDestination__c.field-meta.xml
<CustomField>
    <fullName>RenewalReportDecisionDelayDestination__c</fullName>
    <label>更新_報告ルール_決裁遅延メール送信先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>