force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalReportOtherNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalReportOtherNotes__c</fullName>
    <label>更新_報告ルール_その他注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>