force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalResidentAtSendingNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalResidentAtSendingNotes__c</fullName>
    <label>更新入居者送付時注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>