force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalTermsConfirmationLayout__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsConfirmationLayout__c</fullName>
    <label>更新条件確認書レイアウト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>