force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalTermsWhenCheckNote__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsWhenCheckNote__c</fullName>
    <label>更新条件確認時備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>