force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RenewalTermsWhenCheckNotes__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsWhenCheckNotes__c</fullName>
    <label>更新条件確認時注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>