force-app/main/default/objects/ServiceContractRenewalConditionChange__c/fields/RentTermsChangeApplicationFormImprint__c.field-meta.xml
<CustomField>
    <fullName>RentTermsChangeApplicationFormImprint__c</fullName>
    <label>賃貸条件変更申請書押印欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>